Add: Mailchimp css to local

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Newsby Networks</title>
-	<meta name="title" content="Newsby Networks" />
-	<meta name="description" content="Newsby is a crowd sourced location based news app. Revolutionary message pull based news updation allows a news to convert to a continuous story.">
+	<title>NewsBy Networks</title>
+	<meta name="title" content="NewsBy Networks" />
+	<meta name="description" content="NewsBy is a crowd sourced location based news app. Revolutionary message pull based news updation allows a news to convert to a continuous story.">
 	<META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
-	<meta name="keywords" content="newsby networks, geo tagged, location based, news today, local news, chennai news, bangalore news, crowd sourced, news app, journalist profile, debarko.de, message pull, top stories, newsby">
+	<meta name="keywords" content="NewsBy Networks, geo tagged, location based, news today, local news, chennai news, bangalore news, crowd sourced, news app, journalist profile, debarko.de, message pull, top stories, NewsBy">
 	<meta name="author" content="folksFreak">
 	
   <SCRIPT LANGUAGE="JavaScript">
@@ -27,12 +27,13 @@
     }, 30000);
 
   </SCRIPT>
-<!-- 	<link rel="image_src" href="/images/notify_better_image.png" />
+<!--
+	<link rel="image_src" href="/images/notify_better_image.png" />
 
 	<meta content="http://www.thepetedesign.com/demos/onepage_scroll_demo.html" property="og:url" />
 	<meta content="http://www.thepetedesign.com/images/onepage_scroll_image.png" property="og:image" />
   <link rel="canonical" href="http://www.thepetedesign.com/demos/onepage_scroll_demo.html" />
- -->
+ --> 
   <link rel="shortcut icon" id="favicon" href="favicon.png"> 
 	
   <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
@@ -381,7 +382,7 @@
       <div class="pattern">
       </div>
       <div class="side_container">
-        <h1>Newsby</h1>
+        <h1>NewsBy</h1>
         <h2>News platform where you are the journalist.</h2>
         <div class="notif-mailer">
           <!-- Begin MailChimp Signup Form -->
@@ -526,7 +527,7 @@
       </div>
     </section>
   </div>
-  <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+  <link href="./classic-081711.css" rel="stylesheet" type="text/css">
   <link href="./normalize.css" rel="stylesheet" type="text/css">
 
   <script type="text/javascript" src="./jquery-1.9.1.min.js"></script>
