--- a/index.normal.html
+++ b/index.normal.html
@@ -532,6 +532,15 @@
 
   <script type="text/javascript" src="./jquery-1.9.1.min.js"></script>
   <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-48289387-3', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <script>
     var terms = [
       '"Journalism will kill you, but it will keep you alive while you\’re at it."',
       '"A good newspaper, I suppose, is a nation talking to itself."',
