--- a/index.normal.html
+++ b/index.normal.html
@@ -538,6 +538,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-48289387-3', 'auto');
+    ga('require', 'linkid', 'linkid.js');
     ga('send', 'pageview');
   </script>
   <script>
