Fix: Add Facebook Tracking Pixel

--- a/index.normal.html
+++ b/index.normal.html
@@ -8,7 +8,22 @@
 	<META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
 	<meta name="keywords" content="NewsBy Networks, geo tagged, location based, news today, local news, chennai news, bangalore news, crowd sourced, news app, journalist profile, debarko.de, message pull, top stories, NewsBy">
 	<meta name="author" content="folksFreak">
-	
+	<!-- Facebook Conversion Code for Newsletter Signup -->
+  <script>(function() {
+  var _fbq = window._fbq || (window._fbq = []);
+  if (!_fbq.loaded) {
+  var fbds = document.createElement('script');
+  fbds.async = true;
+  fbds.src = '//connect.facebook.net/en_US/fbds.js';
+  var s = document.getElementsByTagName('script')[0];
+  s.parentNode.insertBefore(fbds, s);
+  _fbq.loaded = true;
+  }
+  })();
+  window._fbq = window._fbq || [];
+  window._fbq.push(['track', '6024664152677', {'value':'0.01','currency':'INR'}]);
+  </script>
+  <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6024664152677&amp;cd[value]=0.01&amp;cd[currency]=INR&amp;noscript=1" /></noscript>
   <SCRIPT LANGUAGE="JavaScript">
     Image1= new Image();
     Image1.src = "images/loading.gif";
