--- a/index.normal.html
+++ b/index.normal.html
@@ -173,6 +173,7 @@
       bottom: 10vh;
       left: 50%;
       margin-left: -20px;
+      cursor: pointer;
     }
 
     .main section.page2 {
@@ -540,6 +541,7 @@
     ga('require', 'linkid', 'linkid.js');
     ga('send', 'pageview');
   </script>
+  <script type="text/javascript" src="jquery-1.9.1.min.js"></script>
   <script>
     var terms = [
       '"Journalism will kill you, but it will keep you alive while you\’re at it."',
@@ -563,6 +565,18 @@
       setTimeout(rotateTerm, 10000);
     }
     rotateTerm();
+    /*Plugin for scrolling to a location Start*/
+		$.fn.scrollView = function () {
+			return this.each(function () {
+					$('html, body').animate({
+							scrollTop: $(this).offset().top
+					}, 1000);
+			});
+		}
+    /**/
+    $(".arrow").on("click", function() {
+			$('.page_container').scrollView();
+		});
   </script>
 </body>
 </html>
