js only scrollto id

--- a/index.normal.html
+++ b/index.normal.html
@@ -565,7 +565,7 @@
       setTimeout(rotateTerm, 10000);
     }
     rotateTerm();
-    /**/
+    /*js only code*/
     function currentYPosition() {
 			// Firefox, Chrome, Opera, Safari
 			if (self.pageYOffset) return self.pageYOffset;
